--- a/template/addProductForm.twig
+++ b/template/addProductForm.twig
@@ -30,7 +30,7 @@
                             
                             <div class="form-label-group">
                                 <label for="description">Description</label>
-                                <input type="text" id="description" name="description" class="form-control" placeholder="Description" required>
+                                <textarea type="text" id="description" name="description" class="form-control" placeholder="Description" required></textarea>
                             </div>
                             
                             <div class="form-label-group">
