--- a/template/adminLayout.twig
+++ b/template/adminLayout.twig
@@ -24,15 +24,15 @@
         <header>
             <nav id="menu">
                 <div class="logo">
-                    <a href="index.php?url=home"><img src="./public/img/logotest.png" alt="logo"></a>
+                    <a href="index.php?url=home"><img src="./public/img/logoff.png" alt="logo"></a>
                     <a href="index.php?url=home"><h2>Le bon FF</h2></a>
                 </div>
                 
                 <ul class="items">
-                    <li><i class="fa-solid fa-gear"></i><a href="index.php?url=admin">Tableau administrateur</a></li>
-                    <li><i class="fas fa-fw fa-folder"></i><a href="index.php?url=adminCategories">Catégories</a></li>
-                    <li><i class="fas fa-fw fa-folder"></i><a href="index.php?url=adminProducts">Annonces</a></li>
-                    <li><i class="fa-solid fa-users"></i><a href="index.php?url=admin">Utilisateurs</a></li>   
+                    <li><i class="fa-solid fa-gear"></i><a href="index.php?url=admin/users">Tableau administrateur</a></li>
+                    <li><i class="fas fa-fw fa-folder"></i><a href="index.php?url=admin/categories">Catégories</a></li>
+                    <li><i class="fas fa-fw fa-folder"></i><a href="index.php?url=admin/products">Annonces</a></li>
+                    <li><i class="fa-solid fa-users"></i><a href="index.php?url=admin/users">Utilisateurs</a></li>   
                 </ul>
             </nav>
         </header>
@@ -60,7 +60,7 @@
                 <div class="card-box">
                     <i class="fas fa-fw fa-folder"></i>
                     <div>
-                        <a href="index.php?url=addCategory">
+                        <a href="index.php?url=admin/category/create">
                             <span>Ajouter une catégorie</span>
                         </a>
                     </div>
@@ -79,7 +79,7 @@
                     
                     <i class="fa-solid fa-users"></i>
                     <div>
-                        <a href="index.php?url=admin">
+                        <a href="index.php?url=admin/users">
                             <span>Gérer les utilisateurs</span> 
                         </a>
                     </div>
