--- a/template/login.twig
+++ b/template/login.twig
@@ -24,8 +24,9 @@
                             <p class="d-block text-center" id="error-connexion"> {{ message != '' ? message : '' }} </p>
 
                             <button class="btn btn-lg btn-primary btn-block" type="submit">Connexion</button>
-                            <h4>Pas encore de compte ? Alors inscrivez vous :</h4>
-                            <a class="d-block text-center mt-2 " href="index.php?url=register">S'inscrire</a>
+                            <hr>
+                            <p>Pas encore de compte ? Alors inscrivez vous :</p>
+                            <a class="d-block text-center mt-2 btn btn-success " href="index.php?url=register">S'inscrire</a>
                         </form>
                     </div>
                 </div>
