--- a/template/productDetail.twig
+++ b/template/productDetail.twig
@@ -43,7 +43,7 @@
           <div class="card-body">
 
             <p>{{product.description}}</p>
-            <small class="text-muted">Annonce déposée par {{product.id_user}} le {{product.created_at}}</small>
+            <small class="text-muted">Annonce déposée par {{user.firstName}} {{user.lastName}} le {{product.createdAt}}</small>
             <hr>
 
             <a href="#" class="btn btn-danger">Acheter</a>
