--- a/template/register.twig
+++ b/template/register.twig
@@ -23,6 +23,11 @@
                     <label for="firstName">Prénom</label>
                     <input type="text" id="firstName" name="firstName" class="form-control" placeholder="Prénom" required>
                 </div>
+                
+                <div class="form-label-group">
+                    <label for="phone">Numéro de téléphone</label>
+                    <input type="tel" id="phone" name="phone" class="form-control" placeholder="Numéro de téléphone" required>
+                </div>
 
                 <div class="form-label-group">
                     <label for="email">Adresse mail</label>
