--- a/template/updateAccountForm.twig
+++ b/template/updateAccountForm.twig
@@ -24,6 +24,11 @@
                             <label for="firstName">Prénom</label>
                             <input type="text" id="firstName" name="firstName" class="form-control" placeholder="Prénom" value="{{session.firstName}}" required>
                         </div>
+                        
+                        <div class="form-label-group">
+                            <label for="phone">Numéro de téléphone</label>
+                            <input type="text" id="phone" name="phone" class="form-control" placeholder="Numéro de téléphone" value="{{session.phone}}" required>
+                        </div>
         
                         <div class="form-label-group">
                             <label for="email">Adresse mail</label>
