--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Final";
+    src: url("./public/font/finalf.ttf") format("truetype");
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -27,20 +32,21 @@ body {
 }
 
 #menu .logo img {
-    width: 45px;
-    margin-right: 15px;
+    width: 55px;
+    margin-right: 8px;
 }
 
 #menu .logo h2 {
-    font-size: 25px;
-    color: #F3F4F6;;
+    font-family: "Final", sans-serif;
+    font-size: 26px;
+    color: #F3F4F6;
+    margin-bottom: 0;
 }
 
 #menu .items {
     margin: 0;
     padding: 0;
     display: flex;
-    /*width: 50%;*/
 }
 
 #menu .items li {
@@ -50,6 +56,7 @@ body {
 
 #menu .items li a {
     text-decoration: none;
+    font-size: 18px;
     color: #F3F4F6;
 }
 
@@ -92,6 +99,7 @@ body {
 #menu .nav-end .profile a {
     text-decoration: none;
     color: white;
+    font-size: 18px;
 }
 
 #menu .nav-end .profile a:hover {
@@ -117,6 +125,7 @@ body {
     display: flex;
     justify-content: space-between;
     margin: 1em 0;
+    padding: 0;
 }
 
 #nav-cat .items-cat li {
@@ -128,6 +137,7 @@ body {
 #nav-cat .items-cat li a {
     text-decoration: none;
     color: dimgrey;
+    font-size: 18px;
 }
 
 #nav-cat .items-cat li a:hover {
@@ -148,7 +158,7 @@ body {
 
 #footer .block h2 {
     font-size: 20px;
-    text-align: center;
+    text-align: start;
     padding-bottom: 0.5em;
     border-bottom: 1px solid;
 }
@@ -180,4 +190,113 @@ body {
 
 #footer .collab {
     display: flex;
+}
+
+@media (max-width: 1024px) {
+    #menu .logo h2 {
+        font-size: 20px;
+        font-weight: 700;
+    }
+    
+    #menu .nav-end .search {
+    padding: 8px;
+    margin-right: 2em;
+    }
+}
+
+@media (max-width: 768px) {
+    #menu .logo {
+        margin: 1.5em 0.5em;
+    }
+    #menu .logo img {
+        width: 35px;
+        margin-right: 5px;
+    }
+    
+    #menu .logo h2 {
+        font-size: 16px;
+    }
+    
+    #menu .items li a {
+        font-size: 14px;
+    }
+    
+    #nav-cat .items-cat li a {
+        font-size: 16px;
+    }
+
+    #menu .nav-end .search {
+        padding: 4px;
+        margin-right: 1em;
+    }
+            
+    #menu .nav-end .search input {
+        font-size: 13px;
+    }
+    
+    #menu .nav-end .profile a {
+        font-size: 14px;
+    }
+    
+    #menu .nav-end .profile img {
+        width: 30px;
+        height: 30px;
+        margin-left: 0.1em;
+    }
+    
+    #footer .block h2 {
+        font-size: 17px;
+    }
+    
+    #footer .block .block-items a,
+    #footer .block .block-items li{
+        font-size: 12px;
+    }
+    
+    #footer .block img {
+        width: 100px;
+        height: 100px;
+        margin: 0.5em;
+    }
+}
+
+
+@media (max-width: 640px) {
+    #menu .logo {
+        margin: 1.5em 0 1.5em 0.5em;
+    }
+    
+    #menu .logo img {
+        margin-right: 0;
+    }
+    
+    #menu .logo h2 {
+        display: none;
+    }
+    
+    #nav-cat .items-cat li a {
+        font-size: 15px;
+    }
+
+    #footer .block img {
+        width: 95px;
+        height: 95px;
+        margin: 1em 0.5em;
+    }
+}
+
+@media (max-width: 500px) {
+    /* Faire un menu complet pour mobile y compris pour la nav des catégories */
+    
+    #footer {
+        flex-wrap: wrap;
+    }
+    
+    #footer .block h2 {
+        font-size: 16px;
+    }
+    
+    #footer .block img {
+        margin-top: 1.5em;
+    }
 }
