--- a/template/addCategoryForm.twig
+++ b/template/addCategoryForm.twig
@@ -21,7 +21,7 @@
                 
                 <div class="form-label-group">
                     <label for="description">Description</label>
-                    <input type="text" id="description" name="description" class="form-control" placeholder="Description de la catégorie" required>
+                    <textarea type="text" id="description" name="description" class="form-control" placeholder="Description de la catégorie" required></textarea>
                 </div>
 
                 <div class="form-label-group">
