--- a/template/adminCategories.twig
+++ b/template/adminCategories.twig
@@ -33,9 +33,9 @@
 	                <td class="role">
 	                    <p>{{category.url_picture}}</p>
 	                </td>
-	                <td class="edit"><a href="index.php?url=updateCategoryForm&id={{category.id}}">Modifier<i class="fa-solid fa-pen"></i></a></td>
+	                <td class="edit"><a href="index.php?url=admin/category/update&id={{category.id}}">Modifier<i class="fa-solid fa-pen"></i></a></td>
 	                
-	                <td class="delete"><a href="index.php?url=deleteCategory&id={{category.id}}">Supprimer<i class="fa-solid fa-ban"></i></a></td>
+	                <td class="delete"><a href="index.php?url=admin/category/delete&id={{category.id}}">Supprimer<i class="fa-solid fa-ban"></i></a></td>
 	            </tr>
 	          	{% endfor %}
 	      	</tbody>
