--- a/template/home.twig
+++ b/template/home.twig
@@ -4,52 +4,46 @@
 {% block content %}
 
 
-<img class="home-image" src="https://universalsoluce.com/design/jeux/banniere_base.png" alt="">
+<img class="home-image" src="./public/img/banniere.png" alt="Bannière Final Fantasy">
 
 <div class="container">
 
-<!-- Header -->
-        <section class="jumbotron my-4">
-            <h1 class="display-3">Accueil</h1>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <br>            
-            <a href="index.php?url=newProducts&paramName=Nouveautés" class="btn btn-primary btn-lg">Voir les nouveautés</a>
-        </section>
+    <section class="jumbotron my-4">
+        <h1 class="display-3">Final Fantasy</h1>
+        <p class="lead">Si l'on devait retenir qu'un seul mot pour définir un Final Fantasy, sans doute serait-ce : "atmosphère". Une amotsphère unique dont le joueur 
+        se sent imprégné, comme s'il rentrait en communion avec un titre d'exception.</p>
+        <p class="lead">Tous les joueurs de Final Fantasy ont tous vécu cette expérience qui consiste à commencer sa partie après le dîner pour l'achever avec les 
+        premières lueurs de l'aube. C'est le syndrome Final Fantasy. Impossible de décrocher, l'immersion est totale.</p> 
+        <p class="lead">C'est un film, un jeu, une aventure que l'on suit et que l'on vit. Le reste, ce sont aussi des décors admirables de finesse, des effets visuels proches
+        des effets spéciaux hollywoodiens, une véritable quête artistique qui fait du joueur un esthète, adapte du jeu, spectateur du beau.</p>  
+        <a href="index.php?url=newProducts&paramName=Nouveautés" class="btn btn-primary btn-lg">Voir les nouveautés</a>
+    </section>
 
-        <div class="row text-center">
+    <div class="row text-center">
 
-            {% for product in products %}
-            <div class="col-lg-3 col-md-6 mb-4">
-                <div class="card h-100">
-                    <a href="index.php?url=product&id={{product.id}}">
-                    <img class="card-img-top" src="./public/img/products/{{product.urlPicture}}" alt="Image de {{product.name}}">
-                    </a>
-                    <div class="card-body">
-                        <h4 class="card-title">
-                            <a href="index.php?url=product&id={{product.id}}">{{product.name}}</a>
-                        </h4>
-                        <p class="card-text">{{product.description}}</p>
-                        <p>Prix : {{product.price}} euros</p>
-                    </div>
+        {% for product in products %}
+        <div class="col-lg-3 col-md-6 mb-4">
+            <div class="card h-100">
+                <a href="index.php?url=product&id={{product.id}}">
+                <img class="card-img-top" src="./public/img/products/{{product.urlPicture}}" alt="Image de {{product.name}}">
+                </a>
+                <div class="card-body">
+                    <h4 class="card-title">
+                        <a href="index.php?url=product&id={{product.id}}">{{product.name}}</a>
+                    </h4>
+                    <p class="card-text">{{product.description}}</p>
+                    <p>Prix : {{product.price}} euros</p>
+                </div>
 
-                    <div class="card-footer">
-                        <a href="index.php?url=product&id={{product.id}}" class="btn btn-primary">Voir plus</a>
-                    </div>
+                <div class="card-footer">
+                    <a href="index.php?url=product&id={{product.id}}" class="btn btn-primary">Voir plus</a>
                 </div>
             </div>
-            {% endfor %}
-            
         </div>
-        {#
-        <section>
-            <nav class="socialmedia text-center" id="socialmedia">
-                <a href="#" target="_blank"> <img src="public/img/facebook.png" alt="facebook"></a> 
-                <a href="#" target="_blank"> <img src="public/img/insta.png" alt="Instagram"></a>
-                <a href="#" target="_blank"> <img src="public/img/twitter.png" alt="twitter"></a>
-            </nav>
-        </section>
-        #}
+        {% endfor %}
+        
     </div>
+</div>
 
 
 {% endblock %}
