--- a/template/layout.twig
+++ b/template/layout.twig
@@ -11,6 +11,7 @@
 
         {% block stylesheets %}
             	<!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">-->
+        <!--<link href="public/css/bootstrap.min.css" rel="stylesheet">-->
         <link href="public/css/bootstrap.min.css" rel="stylesheet">
         <link href="public/css/style.css" rel="stylesheet">
         <link href="public/css/layout.css" rel="stylesheet"></link>
@@ -24,8 +25,8 @@
             <nav id="menu">
                 <div class="nav-menu">
                     <div class="logo">
-                        <a href="index.php?url=home"><img src="./public/img/logotest.png" alt="logo"></a>
-                        <a href="index.php?url=home"><h2>Le bon Final Fantasy</h2></a>
+                        <a href="index.php?url=home"><img src="./public/img/logoff.png" alt="logo"></a>
+                        <a href="index.php?url=home"><h2>Le bon FF</h2></a>
                     </div>
                     
                     <ul class="items">
@@ -44,7 +45,7 @@
                     <div class="profile">
                         <!-- Voir pour si déconnecté => Se connecter (form JS + redirection vers inscription) / Si connecté => Mon compte + photo et menu déroulant déconnexion ? -->
                         <a href={{session.id != '' ? 'index.php?url=account' : 'index.php?url=login'}}>{{session.id != '' ? 'Mon compte' : 'Se connecter'}}</a>
-                        <a href="index.php?url=account" style="visibility:{{ session.id != '' ? 'visible' : 'hidden' }}"><img src="./public/img/1.png" alt="image de profil"></a>
+                        <a href="index.php?url=account" style="visibility:{{ session.id != '' ? 'visible' : 'hidden' }}"><img src="./public/img/user2.png" alt="image de profil"></a>
                     </div>
                 </div>
                 
