--- a/template/updateCategoryForm.twig
+++ b/template/updateCategoryForm.twig
@@ -20,7 +20,7 @@
                 
                 <div class="form-label-group">
                     <label for="description">Description</label>
-                    <input type="text" id="description" name="description" class="form-control" placeholder="Description de la catégorie" value="{{category.description}}" required>
+                    <textarea type="text" id="description" name="description" class="form-control" placeholder="Description de la catégorie" value="{{category.description}}" required></textarea>
                 </div>
 
                 <div class="form-label-group">
