--- a/template/updateProductForm.twig
+++ b/template/updateProductForm.twig
@@ -30,7 +30,7 @@
                             
                             <div class="form-label-group">
                                 <label for="description">Description</label>
-                                <input type="text" id="description" name="description" class="form-control" placeholder="Description" value="{{product.description}}" required>
+                                <textarea type="text" id="description" name="description" class="form-control" placeholder="Description" value="{{product.description}}" required></textarea>
                             </div>
                             
                             <div class="form-label-group">
