--- a/template/addProductForm.twig
+++ b/template/addProductForm.twig
@@ -45,7 +45,9 @@
 
                             
                             <hr class="my-4">
-                            <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Envoyer</button>
+                            <div class="text-center">
+                                <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Envoyer</button>
+                            </div>
                         </form>
                     </div>
                 </div>
