--- a/template/adminCategories.twig
+++ b/template/adminCategories.twig
@@ -35,7 +35,7 @@
 	                </td>
 	                <td class="edit"><a href="index.php?url=admin/category/update&id={{category.id}}">Modifier<i class="fa-solid fa-pen"></i></a></td>
 	                
-	                <td class="delete"><a href="index.php?url=admin/category/delete&id={{category.id}}">Supprimer<i class="fa-solid fa-ban"></i></a></td>
+	                <td class="delete"><a href="index.php?url=admin/category/delete&id={{category.id}}&img={{category.url_picture}}">Supprimer<i class="fa-solid fa-ban"></i></a></td>
 	            </tr>
 	          	{% endfor %}
 	      	</tbody>
