--- a/template/adminProducts.twig
+++ b/template/adminProducts.twig
@@ -50,7 +50,7 @@
 	                </td>
 	                <td class="edit"><a href="index.php?url=updateProductForm&id={{product.id}}">Modifier</a></td>
 	                
-	                <td class="delete"><a href="index.php?url=deleteProduct&id={{product.id}}">Supprimer</a></td>
+	                <td class="delete"><a href="index.php?url=deleteProduct&id={{product.id}}&img={{product.url_picture}}">Supprimer</a></td>
 	            </tr>
 	          	{% endfor %}
 	      	</tbody>
