--- a/template/layout.twig
+++ b/template/layout.twig
@@ -68,8 +68,8 @@
                     <h2>Site</h2>
                     <ul class="block-items">
                         <li><a href="index.php?url=home">Page d'accueil</a></li>
-                        <li><a href="index.php?url=home">Page des nouveautés</a></li>
-                        <li><a href="index.php?url=home">Page des catégories</a></li>
+                        <li><a href="index.php?url=newProducts&paramName=Nouveautés">Page des nouveautés</a></li>
+                        <li><a href="index.php?url=categories">Page des catégories</a></li>
                         <li><a href="index.php?url=home">Mentions légales</a></li>
                     </ul>
                 </div>
