--- a/template/addCategoryForm.twig
+++ b/template/addCategoryForm.twig
@@ -14,22 +14,23 @@
             <div class="card-body">
                 <h5 class="card-title text-center">Ajouter une catégorie</h5>
                 <form class="form-signin" method="post" action="index.php?url=insertCategory" enctype="multipart/form-data">
-                <div class="form-label-group">
-                    <label for="name">Nom</label>
-                    <input type="text" id="name" name="name" class="form-control" placeholder="Nom de la catégorie" required autofocus>
-                </div>
-                
-                <div class="form-label-group">
-                    <label for="description">Description</label>
-                    <textarea type="text" id="description" name="description" class="form-control" placeholder="Description de la catégorie" required></textarea>
-                </div>
-
-                <div class="form-label-group">
-                    <label for="image">Image</label>
-                    <input type="file" id="image" name="image" class="form-control" placeholder="Image souhaitée" required>
-                </div>
-
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Valider</button>
+                    <div class="form-label-group">
+                        <label for="name">Nom</label>
+                        <input type="text" id="name" name="name" class="form-control" placeholder="Nom de la catégorie" required autofocus>
+                    </div>
+                    
+                    <div class="form-label-group">
+                        <label for="description">Description</label>
+                        <textarea type="text" id="description" name="description" class="form-control" placeholder="Description de la catégorie" required></textarea>
+                    </div>
+    
+                    <div class="form-label-group">
+                        <label for="image">Image</label>
+                        <input type="file" id="image" name="image" class="form-control" placeholder="Image souhaitée" required>
+                    </div>
+                    <div class="text-center">
+                        <button class="btn btn-lg btn-primary btn-block" type="submit">Valider</button>
+                    </div>
                 </form>
             </div>
             </div>
