--- a/template/categories.twig
+++ b/template/categories.twig
@@ -23,7 +23,7 @@
 						</h4>
 						<p class="card-text">{{category.description}}</p>
 						<a class="btn btn-primary" href="index.php?url=updateCategoryForm&id={{category.id}}" style="visibility:{{ session.role != 'admin' ? 'hidden' : 'visible' }}">Modifier</a>
-						<a class="btn btn-danger" href="index.php?url=deleteCategory&id={{category.id}}" style="visibility:{{ session.role != 'admin' ? 'hidden' : 'visible' }}">Supprimer</a>
+						<a class="btn btn-danger" href="index.php?url=deleteCategory&id={{category.id}}&img={{category.url_picture}}" style="visibility:{{ session.role != 'admin' ? 'hidden' : 'visible' }}">Supprimer</a>
 					</div>
 				</div>
 			</div>
