corrections login, register et update profil

--- a/template/adminLayout.twig
+++ b/template/adminLayout.twig
@@ -69,7 +69,7 @@
                 <div class="card-box">
                     <i class="fas fa-fw fa-folder"></i>
                     <div>
-                        <a href="index.php?url=addProduct">
+                        <a href="index.php?url=product/create">
                             <span>Ajouter une annonce</span>
                         </a>
                     </div>
