--- a/template/adminProducts.twig
+++ b/template/adminProducts.twig
@@ -48,7 +48,7 @@
 	                <td class="role">
 	                    <p>{{product.url_picture}}</p>
 	                </td>
-	                <td class="edit"><a href="index.php?url=updateProductForm&id={{product.id}}">Modifier</a></td>
+	                <td class="edit"><a href="index.php?url=product/update&id={{product.id}}">Modifier</a></td>
 	                
 	                <td class="delete"><a href="index.php?url=deleteProduct&id={{product.id}}&img={{product.url_picture}}">Supprimer</a></td>
 	            </tr>
