--- a/template/home.twig
+++ b/template/home.twig
@@ -16,7 +16,7 @@
         premières lueurs de l'aube. C'est le syndrome Final Fantasy. Impossible de décrocher, l'immersion est totale.</p> 
         <p class="lead">C'est un film, un jeu, une aventure que l'on suit et que l'on vit. Le reste, ce sont aussi des décors admirables de finesse, des effets visuels proches
         des effets spéciaux hollywoodiens, une véritable quête artistique qui fait du joueur un esthète, adapte du jeu, spectateur du beau.</p>  
-        <a href="index.php?url=newProducts&paramName=Nouveautés" class="btn btn-primary btn-lg">Voir les nouveautés</a>
+        <a href="index.php?url=products/new&paramName=Nouveautés" class="btn btn-primary btn-lg">Voir les nouveautés</a>
     </section>
 
     <div class="row text-center">
