--- a/template/login.twig
+++ b/template/login.twig
@@ -22,8 +22,10 @@
                             </div>
 
                             <p class="d-block text-center" id="error-connexion"> {{ message != '' ? message : '' }} </p>
-
-                            <button class="btn btn-lg btn-primary btn-block" type="submit">Connexion</button>
+                            
+                            <div class="text-center">
+                                <button class="btn btn-lg btn-primary btn-block" type="submit">Connexion</button>
+                            </div>
                             <hr>
                             <p>Pas encore de compte ? Alors inscrivez vous :</p>
                             <a class="d-block text-center mt-2 btn btn-success " href="index.php?url=register">S'inscrire</a>
