--- a/template/account.twig
+++ b/template/account.twig
@@ -22,7 +22,7 @@
                 <a class="btn btn-primary" id="updateAccount" href="index.php?url=account/update">Modifier mes informations personnelles</a>
 		        <a class="btn btn-danger" id="updateAccount" href="index.php?url=account/delete">Supprimer mon compte</a>
 		        <hr>
-		        <a class="btn btn-success" id="btn-ajouter-annonce" href="index.php?url=addProduct">Ajouter une annonce</a>
+		        <a class="btn btn-success" id="btn-ajouter-annonce" href="index.php?url=product/create">Ajouter une annonce</a>
 		        <hr>
 		        <a class="btn btn-danger" id="logout" href="index.php?url=logout">Déconnexion</a>
 		        <hr>
@@ -45,7 +45,7 @@
                                 </h4>
                                 <h5> Prix: {{product.price}} euros</h5>
                                 <p class="card-text">{{product.description}}</p>
-                                <a class="btn btn-primary" href="index.php?url=updateProductForm&id={{product.id}}" style="visibility:{{ session.id != '' ? 'visible' : 'hidden' }}">Modifier</a>
+                                <a class="btn btn-primary" href="index.php?url=product/update&id={{product.id}}" style="visibility:{{ session.id != '' ? 'visible' : 'hidden' }}">Modifier</a>
                                 <a class="btn btn-danger" href="index.php?url=deleteProduct&id={{product.id}}&img={{product.urlPicture}}" style="visibility:{{ session.id != '' ? 'visible' : 'hidden' }}">Supprimer</a>
                             </div>
                         </div>
