--- a/template/products.twig
+++ b/template/products.twig
@@ -10,7 +10,7 @@
 			<h1 class="my-4 col-md-8">Catégorie {{paramName}}</h1>
 		</div>
 		<div class="col-md-4">
-			<a class="my-5 px-5 btn btn-success" id="btn-ajouter-rubrique" href="index.php?url=addProduct" style="visibility:{{ session.id != '' ? 'visible' : 'hidden' }}">Créer une annonce</a>
+			<a class="my-5 px-5 btn btn-success" id="add-product" href="index.php?url=product/create" style="visibility:{{ session.id != '' ? 'visible' : 'hidden' }}">Créer une annonce</a>
 		</div>
 	</div>
 
@@ -18,7 +18,7 @@
     <div class="row">
         <div class="col-lg-3">
             <div class="list-group">
-                <a href="index.php?url=newProducts&paramName=Nouveautés" class="list-group-item {{paramName != 'Nouveautés' ? '' : 'active'}}">Nouveautés</a>
+                <a href="index.php?url=products/new&paramName=Nouveautés" class="list-group-item {{paramName != 'Nouveautés' ? '' : 'active'}}">Nouveautés</a>
                 
                 {% for category in categories %}
 
@@ -42,7 +42,7 @@
 								</h4>
 								<p class="card-text">{{product.description}}</p>
 								<p class="card-text">Prix : {{product.price}} euros</p>
-								<a class="btn btn-primary" href="index.php?url=updateProduct&id={{product.id}}" style="visibility:{{ session.role != 'admin' ? 'hidden' : 'visible' }}">Modifier</a>
+								<a class="btn btn-primary" href="index.php?url=product/update&id={{product.id}}" style="visibility:{{ session.role != 'admin' ? 'hidden' : 'visible' }}">Modifier</a>
 								<a class="btn btn-danger" href="index.php?url=deleteProduct&id={{product.id}}&img={{product.urlPicture}}" style="visibility:{{ session.role != 'admin' ? 'hidden' : 'visible' }}">Supprimer</a>
 							</div>
 							
