--- a/template/adminCategories.twig
+++ b/template/adminCategories.twig
@@ -4,6 +4,9 @@
 
 {% block content %}
 
+<!-- Faire le css de cette balise p ci dessous -->
+<p>{{message}}</p>
+
 	<div class="board">
 	    <table>
 	        <thead>
