--- a/template/layout.twig
+++ b/template/layout.twig
@@ -80,25 +80,25 @@
                 <div class="final-fantasy">
                     <h2>Jeux Final Fantasy</h2>
                     <ul class="block-items">
-                        <li>Final Fantasy VII</li>
-                        <li>Final Fantasy VIII</li>
-                        <li>Final Fantasy IX</li>
-                        <li>Final Fantasy X</li>
+                        <li><a href="https://www.jeuxvideo.com/jeux/jeu-55425/">Final Fantasy VII</a></li>
+                        <li><a href="https://www.jeuxvideo.com/jeux/jeu-56135/">Final Fantasy VIII</a></li>
+                        <li><a href="https://www.jeuxvideo.com/jeux/jeu-57336/">Final Fantasy IX</a></li>
+                        <li><a href="https://www.jeuxvideo.com/jeux/playstation-2-ps2/00003612-final-fantasy-x.htm">Final Fantasy X</a></li>
                     </ul>
                 </div>
             </div>
             
             <div class="collab">
                 <div class="block">
-                        <img src="./public/img/merci.png" alt="Image d'un formateur lambda">
+                    <a href="https://www.linkedin.com/in/pierre-waflart/"><img src="./public/img/merci.png" alt="Formateur lambda"></a>
                 </div>
                 
                 <div class="block">
-                    <img src="./public/img/merci3.png" alt="Image d'une collègue lambda">
+                    <a href="https://www.linkedin.com/in/yuna-charlon/"><img src="./public/img/merci3.png" alt="Shiva"></a>
                 </div>
                 
                 <div class="block">
-                    <img src="./public/img/merci2.png" alt="Image d'une collègue lambda">
+                    <a href="https://www.linkedin.com/in/jessica-loreau-6b6561192/"><img src="./public/img/merci2.png" alt="Collègue lambda"></a>
                 </div>
             </div>
         </footer>	
